examples/failing/TypeError.purs
-- @shouldFailWith TypesDoNotUnify
module Main where

import Prelude

test = 1 <> "A"
